# python-boilerplate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
devices_hub/: consts.py  errors.py  logger.py  main.py  mqtt_connection.py  schemas.py  subscribers.py  topics.py  utils.py
devices_hub/mqtt/: __init__.py  errors.py  mqtt.py  subscribers.py  topics.py
devices_hub/zeroconf_lib/: errors.py  listeners.py
scripts/: prevent_master.sh
tests/: test_python_boilerplate.py
